Update and rename wesela.html.html to wesela.html

--- a/wesela.html
+++ b/wesela.html
@@ -11,7 +11,7 @@
 <body class="flex">
     <header>
         <h1>
-            <img src="logo.png" height="70px"> Dom Weselny zoragnizuje wesele za Ciebie
+            <img src="logo.png" height="70px"> Dom Weselny zorganizuje wesele za Ciebie
             <img src="logo.png" height="70px">
         </h1>
     </header>
